--- a/manifest.json
+++ b/manifest.json
@@ -8,11 +8,18 @@
     "theme_color": "#01579b",
     "icons": [
         {
-            "src": "icon.png",
+            "src": "icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
 
-        }
+        },
+        {
+            "src": "icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any maskable"
+
+        }        
     ]
 }
